# livekit_agent

./: .env.example  .gitignore  Dockerfile  livekit.toml  package-lock.json  package.json  pyproject.toml  sip-dispatch-rule.json  sip-inbound-trunk.json  sip-outbound-trunk.json  test-gemini.js  test-gemini2.js  tsconfig.json
docs/uat/: phase-60-personas.md  phase-60-sentry-playbook.md
patches/: fix-gemini-audio.js
src/: agent.js  agent.py  agent.ts  health.js  health.py  post-call.js  post-call.ts  post_call.py  prompt.js  prompt.py  prompt.ts  supabase.js  supabase.ts  supabase_client.py  utils.js  utils.py  utils.ts
src/integrations/: __init__.py  _refresh_lock.py  google_maps.py  jobber.py  xero.py
src/lib/: booking.js  booking.py  booking.ts  calendar_push.py  customer_context.py  fetch_sentinel.py  google-calendar.js  google-calendar.ts  google_calendar.py  leads.js  leads.py  leads.ts  notifications.js  notifications.py  notifications.ts  outlook_calendar.py  phone.py  service_area.py  slot-calculator.js  slot_calculator.py  subscription_gate.py  telemetry.py  whisper-message.js  whisper-message.ts  whisper_message.py  write_outcome.py
src/lib/triage/: classifier.js  classifier.py  classifier.ts  layer1-keywords.js  layer1_keywords.py  layer2-llm.js  layer2_llm.py  layer3-rules.js  layer3-rules.ts  layer3_rules.py
src/messages/: en.json  es.json
src/tools/: __init__.py  _availability_lib.py  book-appointment.js  book-appointment.ts  book_appointment.py  capture-lead.js  capture-lead.ts  capture_lead.py  check-availability.js  check-availability.ts  check-caller-history.js  check-caller-history.ts  check_availability.py  check_caller_history.py  check_customer_account.py  check_day.py  check_slot.py  end-call.js  end-call.ts  end_call.py  index.js  index.ts  next_available_days.py  transfer-call.js  transfer-call.ts  transfer_call.py  types.ts  validate_address.py
src/webhook/: __init__.py  app.py  caps.py  schedule.py  security.py  twilio_routes.py
tests/: conftest.py  test_agent_jobber_timeout.py  test_agent_stt_language.py  test_agent_xero_timeout.py  test_availability_alternatives.py  test_book_appointment_validation.py  test_caller_history_pre_session.py  test_capture_lead_validation.py  test_cascade_recovery_invariants.py  test_cascade_recovery_residual_audio.py  test_check_availability_slot_cache.py  test_check_customer_account.py  test_customer_context_merge.py  test_ensure_utc_iso.py  test_filler_audio.py  test_goodbye_diag.py  test_google_calendar_tz.py  test_google_maps.py  test_greeting_not_interruptible.py  test_jobber_integration.py  test_no_generate_reply_in_src.py  test_notifications_out_of_area.py  test_notifications_outbox_contract.py  test_pipeline_session.py  test_prompt.py  test_prompt_address_validation_rule.py  test_prompt_booking.py  test_prompt_call_duration.py  test_prompt_corrections.py  test_prompt_customer_context.py  test_prompt_final_nonnegotiables.py  test_prompt_greeting_directive.py  test_prompt_info_gathering.py  test_prompt_language.py  test_prompt_locale_collapse.py  test_prompt_name_and_language_hardening.py  test_prompt_outcome_words.py  test_prompt_tail_sections.py  test_prompt_tool_narration.py  test_prompt_voice_behavior.py  (+14 more)
tests/fixtures/gmaps_responses/: ca_confirmed.json  quota_exceeded_429.json  sg_hdb_confirmed.json  sg_hdb_subpremise_missing.json  unsupported_region_de.json  us_confirm_with_corrections.json  us_confirmed.json  us_fix_required.json
tests/webhook/: conftest.py  test_caps.py  test_routes.py  test_schedule.py  test_security.py
