[project]
name = "voco-livekit-agent"
version = "1.0.0"
description = "Voco AI voice receptionist — Twilio SIP + LiveKit + OpenAI gpt-realtime-2"
requires-python = ">=3.11"
dependencies = [
    # Pinned at 1.5.7 (2026-04-30) — patch bump on top of Phase 63's 1.5.6 mainline.
    # Phase 65: voice brain migrated Gemini 3.1 Flash Live -> OpenAI gpt-realtime-2.
    # livekit-plugins-openai is pinned to the SAME 1.5.7 line as livekit-agents so the
    # RealtimeModel API surface (TurnDetection / AudioTranscription shapes) matches what
    # src/agent.py constructs. livekit-plugins-google was dropped (no remaining importer —
    # the only user was src/agent.py; Calendar/Maps use google-auth/google-api-python-client,
    # which are separate deps below and STAY).
    "livekit-agents==1.5.7",
    "livekit-plugins-openai==1.5.7",
    "livekit-plugins-silero==1.5.7",
    "livekit-plugins-turn-detector==1.5.7",
    "livekit-plugins-noise-cancellation>=0.2,<1",
    "livekit-api>=1.0,<2",
    "supabase>=2.0,<3",
    "openai>=2.0,<3",
    "twilio>=9.0,<10",
    "resend>=2.0,<3",
    "stripe>=10.0,<12",
    "google-auth>=2.0,<3",
    "google-api-python-client>=2.0,<3",
    "sentry-sdk>=2.0,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-multipart>=0.0.9,<1",
    "phonenumbers>=9.0,<10",
    # Phase 61 Pitfall 8: promote httpx from transitive (via livekit-agents /
    # supabase) to a direct, version-pinned dep. The Address Validation client
    # in src/integrations/google_maps.py imports it explicitly; we don't want a
    # silent ImportError if a future minor of livekit-agents drops it.
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
